@@ -98,6 +98,7 @@
                         <argLine>
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
                         </argLine>
                     </configuration>
                 </plugin>
